--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,23 @@
+annotated-types==0.7.0
+anyio==4.9.0
+blinker==1.9.0
+certifi==2025.1.31
+charset-normalizer==3.4.1
+click==8.1.8
 Flask==3.1.0
-requests==2.32.3
+h11==0.14.0
+httpcore==1.0.7
+httpx==0.28.1
+idna==3.10
+itsdangerous==2.2.0
+Jinja2==3.1.6
+MarkupSafe==3.0.2
 ollama==0.4.7
+pydantic==2.11.2
+pydantic_core==2.33.1
+requests==2.32.3
+sniffio==1.3.1
+typing-inspection==0.4.0
+typing_extensions==4.13.1
+urllib3==2.3.0
+Werkzeug==3.1.3
