--- a/render.yaml
+++ b/render.yaml
@@ -1,8 +1,7 @@
 services:
   - type: web
-    name: ai-analyserare
+    name: ai-server
     env: python
+    buildCommand: pip install -r requirements.txt
+    startCommand: python main.py
     plan: free
-    buildCommand: ""
-    startCommand: "python main.py"
-    envVars: []
