--- a/render.yaml
+++ b/render.yaml
@@ -3,5 +3,5 @@ services:
     name: ai-server
     env: python
     buildCommand: pip install -r requirements.txt
-    startCommand: gunicorn main:app
+    startCommand: python main.py
     plan: free
